--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.0.2",
+    "@nestjs/common": "^10.3.4",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "next": "14.1.4",
     "nodemon": "^3.1.0",
-    "react": "^18",
+    "react": "^18.2.0",
     "react-dom": "^18"
   },
   "devDependencies": {
